--- a/index.html
+++ b/index.html
@@ -1,113 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-<title>PDFab</title>
-<link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ccircle cx='50' cy='50' r='50' fill='%23336699'/%3E%3Ctext x='50' y='58' font-size='40' font-family='Arial' fill='white' text-anchor='middle'%3EP%3C/text%3E%3C/svg%3E" />
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+<title>PDFab — © PDFab 2025</title>
+<link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Crect width='100' height='100' rx='20' fill='%2333a6a6'/%3E%3Ctext x='50' y='60' font-size='48' font-family='Arial' fill='white' text-anchor='middle'%3EPD%3C/text%3E%3C/svg%3E">
 <style>
-  *, *::before, *::after { box-sizing: border-box; }
-  body {
-    margin: 0;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background: #e0e5ec;
-    color: #111;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-  }
-
-  .app-frame {
-    background: #e0e5ec;
-    border-radius: 24px;
-    padding: 16px;
-    width: 95%;
-    max-width: 1300px;
-    height: 95vh;
-    display: flex;
-    flex-direction: column;
-    box-shadow: 20px 20px 60px #b8bcc6, -20px -20px 60px #ffffff;
-  }
-
-  header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 12px 24px;
-    border-radius: 16px;
-    background: #e0e5ec;
-    box-shadow: 6px 6px 12px #b8bcc6, -6px -6px 12px #ffffff;
-  }
-  .brand { display: flex; align-items: center; gap: 12px; }
-  .icon {
-    width: 50px; height: 50px;
-    border-radius: 50%;
-    background: #336699;
-    display: flex; align-items: center; justify-content: center;
-    color: white; font-weight: 900; font-size: 28px;
-    box-shadow: 4px 4px 8px #2a557f, -4px -4px 8px #3e77b0;
-  }
-  .title { font-size: 24px; font-weight: 900; }
-  .sub { font-size: 14px; color: #555; font-weight: 600; }
-
-  .workspace { display: flex; flex:1; gap:16px; margin-top:16px; overflow:hidden; }
-  .left { flex:1; display:flex; flex-direction:column; gap:12px; }
-  .toolbar {
-    display:flex; flex-wrap:wrap; gap:8px; padding:8px; border-radius:16px;
-    background: #e0e5ec; box-shadow: inset 4px 4px 8px #b8bcc6, inset -4px -4px 8px #ffffff;
-  }
-  .toolbar button, .toolbar select, .toolbar input[type="number"], .toolbar input[type="color"]{
-    border:none; border-radius:12px; padding:8px 12px; cursor:pointer;
-    background:#e0e5ec; box-shadow: 4px 4px 8px #b8bcc6, -4px -4px 8px #ffffff;
-    font-weight:700;
-  }
+  * { box-sizing: border-box; }
+  body { margin:0; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background:#e0f2f2; display:flex; justify-content:center; padding:20px; }
+  .app-frame { width:100%; max-width:1200px; border-radius:24px; padding:16px; background:#e0f2f2; box-shadow: 8px 8px 20px #b0c4c4, -8px -8px 20px #ffffff; display:flex; flex-direction:column; min-height:90vh; }
+  header { display:flex; justify-content:space-between; align-items:center; padding:12px 24px; background:#e0f2f2; border-radius:16px; box-shadow: inset 4px 4px 10px #b0c4c4, inset -4px -4px 10px #ffffff; }
+  .brand .title { font-size:24px; font-weight:900; color:#333; }
+  .brand .sub { font-size:13px; color:#555; font-weight:600; }
+  button { cursor:pointer; border:none; border-radius:12px; padding:10px 16px; font-weight:700; background:#e0f2f2; box-shadow: 4px 4px 6px #b0c4c4, -4px -4px 6px #ffffff; transition:0.2s; }
+  button:hover { box-shadow: inset 4px 4px 6px #b0c4c4, inset -4px -4px 6px #ffffff; }
+  .workspace { display:flex; flex:1 1 auto; gap:20px; margin-top:20px; }
+  .left { flex:1; display:flex; flex-direction:column; gap:16px; }
+  .toolbar { display:flex; flex-wrap:wrap; gap:12px; padding:12px; border-radius:16px; background:#e0f2f2; box-shadow: inset 4px 4px 10px #b0c4c4, inset -4px -4px 10px #ffffff; }
   .canvas-wrap { flex:1; display:flex; justify-content:center; overflow:auto; }
-  .page {
-    background: #e0e5ec;
-    width:100%; max-width:840px; min-height:1180px;
-    border-radius:24px; padding:36px 44px;
-    box-shadow: inset 4px 4px 8px #b8bcc6, inset -4px -4px 8px #ffffff;
-    display:flex; flex-direction:column;
-  }
-  .editor {
-    flex:1; padding:16px; border-radius:16px; background:#e0e5ec;
-    box-shadow: inset 4px 4px 8px #b8bcc6, inset -4px -4px 8px #ffffff;
-    outline:none; overflow:auto; font-size:18px; line-height:1.6; text-align:center;
-    word-break:break-word;
-  }
-  .editor img.inserted-image { max-width:100%; margin:12px auto; display:block; border-radius:12px; cursor:pointer; }
-  .page-footer { text-align:center; font-size:12px; color:#555; margin-top:24px; }
-
-  .right { width:300px; display:flex; flex-direction:column; gap:12px; overflow:auto; }
-  .panel { background:#e0e5ec; border-radius:16px; padding:12px; box-shadow: inset 4px 4px 8px #b8bcc6, inset -4px -4px 8px #ffffff; }
-  .panel input, .panel select, .panel button { width:100%; margin-top:8px; border:none; border-radius:12px; padding:8px; box-shadow: 4px 4px 8px #b8bcc6, -4px -4px 8px #ffffff; cursor:pointer; }
-  .panel button { background:#e0e5ec; font-weight:700; }
-
-  button#themeToggle { padding:8px 16px; border-radius:20px; cursor:pointer; background:#e0e5ec; box-shadow:4px 4px 8px #b8bcc6, -4px -4px 8px #ffffff; font-weight:700; }
-
-  /* Dark Mode */
-  body.dark-mode, body.dark-mode .app-frame { background:#2b2b3b; box-shadow:20px 20px 60px #1a1a2b, -20px -20px 60px #40405a; color:#e0e5ec; }
-  body.dark-mode header, body.dark-mode .toolbar, body.dark-mode .panel, body.dark-mode .page, body.dark-mode .editor {
-    background:#2b2b3b; box-shadow: inset 4px 4px 8px #1a1a2b, inset -4px -4px 8px #40405a; color:#e0e5ec;
-  }
-  body.dark-mode .toolbar button, body.dark-mode .toolbar select, body.dark-mode .toolbar input, body.dark-mode .panel input, body.dark-mode .panel select, body.dark-mode .panel button { background:#2b2b3b; color:#e0e5ec; box-shadow: 4px 4px 8px #1a1a2b, -4px -4px 8px #40405a; }
-
-  @media(max-width:1024px){.right{width:250px;}} 
-  @media(max-width:768px){.workspace{flex-direction:column;} .right{width:100%;}}
+  .page { background:#e0f2f2; border-radius:24px; padding:36px 44px; width:100%; max-width:840px; min-height:1180px; box-shadow: 8px 8px 20px #b0c4c4, -8px -8px 20px #ffffff; display:flex; flex-direction:column; }
+  .editor { flex:1; background:#e0f2f2; border-radius:18px; padding:20px 28px; font-size:18px; line-height:1.6; color:#333; outline:none; overflow:auto; text-align:center; }
+  .editor img { max-width:80%; border-radius:16px; margin:16px auto; display:block; cursor:pointer; transition:transform 0.2s; }
+  .right { width:360px; background:#e0f2f2; border-radius:24px; padding:24px; box-shadow: 8px 8px 20px #b0c4c4, -8px -8px 20px #ffffff; display:flex; flex-direction:column; gap:24px; }
+  .panel { background:#e0f2f2; border-radius:20px; padding:16px 20px; box-shadow: inset 4px 4px 10px #b0c4c4, inset -4px -4px 10px #ffffff; }
+  .panel h4 { margin-top:0; margin-bottom:12px; font-weight:800; color:#333; }
+  .panel input, .panel select { width:100%; padding:10px; border-radius:12px; border:none; box-shadow: inset 4px 4px 6px #b0c4c4, inset -4px -4px 6px #ffffff; margin-top:6px; }
+  footer { text-align:center; margin-top:12px; font-weight:600; color:#555; }
+  body.dark-mode { background:#121212; }
+  body.dark-mode .app-frame, body.dark-mode header, body.dark-mode .toolbar, body.dark-mode .page, body.dark-mode .right, body.dark-mode .panel { background:#1a1a1a; color:#a0eaea; box-shadow: inset 4px 4px 10px #111, inset -4px -4px 10px #222; }
+  body.dark-mode button { background:#1a1a1a; box-shadow:4px 4px 8px #111, -4px -4px 8px #222; color:#a0eaea; }
 </style>
 </head>
 <body>
 <div class="app-frame">
 <header>
   <div class="brand">
-    <div class="icon">P</div>
-    <div>
-      <div class="title">PDFab</div>
-      <div class="sub">© PDFab 2025</div>
-    </div>
+    <div class="title">PDFab</div>
+    <div class="sub">© PDFab 2025</div>
   </div>
-  <button id="themeToggle">Toggle Theme</button>
+  <button id="themeToggle" aria-pressed="false">Toggle Theme</button>
 </header>
 
 <div class="workspace">
@@ -120,169 +51,134 @@
       <button data-cmd="justifyCenter">⤒</button>
       <button data-cmd="justifyRight">⟶</button>
       <button data-cmd="justifyFull">☰</button>
-      <select id="fontSelect">
-        <option value="inherit">System</option>
-        <option value="Georgia, serif">Georgia</option>
-        <option value="'Times New Roman', Times, serif">Times New Roman</option>
-        <option value="Arial, Helvetica, sans-serif" selected>Arial</option>
-        <option value="Verdana, sans-serif">Verdana</option>
-        <option value="'Courier New', monospace">Courier New</option>
-      </select>
-      <input type="number" id="fontSize" min="8" max="72" value="18" />
-      <input type="color" id="colorPicker" value="#111111" />
-      <input type="file" id="imgUpload" accept="image/*" style="display:none" />
+      <input type="file" id="imgUpload" accept="image/*" style="display:none;">
       <button id="imgBtn">📷 Insert Image</button>
       <button id="clearBtn">Clear</button>
     </div>
     <div class="canvas-wrap">
       <article class="page">
-        <div id="editor" class="editor" contenteditable="true" spellcheck="true">
+        <div id="editor" class="editor" contenteditable="true">
           <h1 style="margin-top:0;">Your title here</h1>
-          <p>Start typing... Insert images using the button above.</p>
+          <p>Start typing... default alignment is center. Insert images by clicking Insert Image or dragging one into this area.</p>
         </div>
-        <footer class="page-footer">A4 • Portrait</footer>
       </article>
     </div>
   </section>
 
   <aside class="right">
     <div class="panel">
-      <label>Page Size</label>
-      <select id="pageSize"><option value="A4" selected>A4</option><option value="Letter">Letter</option></select>
-      <label>Orientation</label>
-      <select id="orientation"><option value="portrait" selected>Portrait</option><option value="landscape">Landscape</option></select>
-      <label>Margins (px)</label>
-      <input id="margins" type="number" value="28" min="0" max="120" />
-    </div>
-    <div class="panel">
-      <label>Document Title</label>
-      <input id="docTitle" type="text" value="PDFab — © PDFab 2025" />
-      <label>Author</label>
-      <input id="docAuthor" type="text" value="PDFab" />
+      <h4>Document Info</h4>
+      <input id="docTitle" type="text" placeholder="Document title" value="PDFab — © PDFab 2025">
+      <input id="docAuthor" type="text" placeholder="Author" value="PDFab">
       <button id="downloadBtn">Export PDF</button>
     </div>
   </aside>
 </div>
+
+<footer>Built with ❤️ • PDFab 2025</footer>
+
 <iframe id="print-frame" style="display:none;"></iframe>
 </div>
 
 <script>
-const editor = document.getElementById('editor');
-const toolbar = document.querySelector('.toolbar');
-const colorPicker = document.getElementById('colorPicker');
-const fontSelect = document.getElementById('fontSelect');
-const fontSize = document.getElementById('fontSize');
-const downloadBtn = document.getElementById('downloadBtn');
-const pageSizeSelect = document.getElementById('pageSize');
-const orientationSelect = document.getElementById('orientation');
-const marginsInput = document.getElementById('margins');
-const docTitleInput = document.getElementById('docTitle');
-const docAuthorInput = document.getElementById('docAuthor');
-const imgUpload = document.getElementById('imgUpload');
-const imgBtn = document.getElementById('imgBtn');
-const clearBtn = document.getElementById('clearBtn');
-const themeToggle = document.getElementById('themeToggle');
-const pageFooter = document.querySelector('.page-footer');
+const editor=document.getElementById('editor');
+const toolbar=document.querySelector('.toolbar');
+const imgUpload=document.getElementById('imgUpload');
+const imgBtn=document.getElementById('imgBtn');
+const clearBtn=document.getElementById('clearBtn');
+const downloadBtn=document.getElementById('downloadBtn');
+const themeToggle=document.getElementById('themeToggle');
 
-document.execCommand('justifyCenter', false, null);
-
+// Toolbar commands
 toolbar.addEventListener('click', e=>{
-  const btn = e.target.closest('button[data-cmd]');
+  const btn=e.target.closest('button[data-cmd]');
   if(!btn) return;
-  const cmd = btn.dataset.cmd;
   document.execCommand('styleWithCSS', false, true);
-  document.execCommand(cmd, false, null);
+  document.execCommand(btn.dataset.cmd, false, null);
   editor.focus();
 });
 
-function applyStyleToSelection(styleProp, value){
-  const sel = window.getSelection();
-  if(!sel || !sel.rangeCount){ editor.style[styleProp]=value; return; }
-  const range = sel.getRangeAt(0);
-  if(range.collapsed){ editor.style[styleProp]=value; return; }
-  const content = range.extractContents();
-  const wrapper = document.createElement('span');
-  wrapper.style[styleProp]=value;
-  wrapper.appendChild(content);
-  range.insertNode(wrapper);
-  sel.removeAllRanges();
-  const newRange = document.createRange();
-  newRange.setStartAfter(wrapper);
-  newRange.collapse(true);
-  sel.addRange(newRange);
-}
-
-fontSelect.addEventListener('change', ()=>applyStyleToSelection('fontFamily', fontSelect.value==='inherit'?'':fontSelect.value));
-fontSize.addEventListener('input', ()=>applyStyleToSelection('fontSize', fontSize.value+'px'));
-colorPicker.addEventListener('input', ()=>applyStyleToSelection('color', colorPicker.value));
-
+// Clear formatting
 clearBtn.addEventListener('click', ()=>{
-  editor.querySelectorAll('span').forEach(s=>{ const p=s.parentNode; while(s.firstChild)p.insertBefore(s.firstChild,s); p.removeChild(s); });
-  editor.querySelectorAll('*').forEach(el=>{ if(el.tagName.toLowerCase()!=='img') el.removeAttribute('style'); });
-  const text=editor.innerText;
-  editor.innerHTML='<div style="text-align:center;">'+text.replace(/\n/g,'<br>')+'</div>';
+  editor.querySelectorAll('*').forEach(el=>{
+    if(el.tagName.toLowerCase()!=='img') el.removeAttribute('style');
+  });
 });
 
-function updatePageFooter(){ pageFooter.textContent=`${pageSizeSelect.value} • ${orientationSelect.value==='portrait'?'Portrait':'Landscape'}`; }
-pageSizeSelect.addEventListener('change', updatePageFooter);
-orientationSelect.addEventListener('change', updatePageFooter);
-updatePageFooter();
+// Image insertion & interactive rotation
+function makeImageInteractive(img){
+  img.style.transform='rotate(0deg)'; img.dataset.rotation=0;
+  const slider=document.createElement('input');
+  slider.type='range'; slider.min=-180; slider.max=180; slider.value=0;
+  slider.style.position='absolute'; slider.style.display='none'; slider.style.width='100px'; slider.style.zIndex=1000;
+  document.body.appendChild(slider);
+  img.addEventListener('click', e=>{
+    e.stopPropagation();
+    const rect=img.getBoundingClientRect();
+    slider.style.left=rect.left+'px';
+    slider.style.top=rect.bottom+5+'px';
+    slider.style.display='block';
+    slider.value=img.dataset.rotation;
+    slider.focus();
+  });
+  slider.addEventListener('input', ()=>{
+    const angle=slider.value;
+    img.dataset.rotation=angle;
+    img.style.transform=`rotate(${angle}deg)`;
+  });
+  document.addEventListener('click', ()=>{ slider.style.display='none'; });
+}
+
+function insertImageAtCaret(src){
+  const img=document.createElement('img');
+  img.src=src; img.className='inserted-image'; img.setAttribute('contenteditable','false');
+  makeImageInteractive(img);
+  const sel=window.getSelection();
+  if(!sel.rangeCount){ editor.appendChild(img); return; }
+  const range=sel.getRangeAt(0);
+  range.deleteContents(); range.insertNode(img);
+  range.setStartAfter(img); range.collapse(true);
+  sel.removeAllRanges(); sel.addRange(range);
+  editor.focus();
+}
 
 imgBtn.addEventListener('click', ()=>imgUpload.click());
 imgUpload.addEventListener('change', e=>{
-  const file = e.target.files[0];
+  const file=e.target.files[0];
   if(file && file.type.startsWith('image/')){
-    const reader = new FileReader();
-    reader.onload=()=>{
-      const img=document.createElement('img');
-      img.src=reader.result;
-      img.className='inserted-image';
-      insertImageAtCaret(img);
-    };
+    const reader=new FileReader();
+    reader.onload=()=>insertImageAtCaret(reader.result);
     reader.readAsDataURL(file);
   }
   e.target.value='';
 });
 
-function insertImageAtCaret(img){
-  const sel = window.getSelection();
-  if(!sel.rangeCount){ editor.appendChild(img); return; }
-  const range = sel.getRangeAt(0);
-  range.deleteContents();
-  range.insertNode(img);
-  range.setStartAfter(img);
-  range.collapse(true);
-  sel.removeAllRanges();
-  sel.addRange(range);
-  editor.focus();
-}
-
+// Export PDF
 downloadBtn.addEventListener('click', ()=>{
-  const orientation = orientationSelect.value;
-  const margin = parseInt(marginsInput.value)||28;
-  const htmlContent = `
-<html>
-<head>
-<title>${docTitleInput.value}</title>
-<style>
-@page{size:${pageSizeSelect.value} ${orientation};margin:${margin}px;}
-body{font-family:Arial,sans-serif;font-size:18px;color:#111;margin:0;padding:${margin}px;-webkit-print-color-adjust:exact;print-color-adjust:exact;}
-img{max-width:100%;height:auto;display:block;margin:12px auto;page-break-inside:avoid;}
-div{word-break:break-word;}
-footer{text-align:center;color:#555;font-size:12px;margin-top:40px;}
-</style>
-</head>
-<body>
-<div>${editor.innerHTML}</div>
-<footer>© PDFab 2025</footer>
-</body>
-</html>`;
+  const htmlContent=`<html><head><title>${document.getElementById('docTitle').value}</title>
+  <style>
+    body{font-family:Arial; font-size:18px; padding:20px; color:#111; -webkit-print-color-adjust:exact; print-color-adjust:exact;}
+    img{max-width:100%; height:auto; display:block; margin:12px auto; transform-origin:center;}
+  </style></head>
+  <body>${editor.innerHTML}</body></html>`;
   const printFrame=document.getElementById('print-frame');
+  printFrame.style.display='block';
   printFrame.srcdoc=htmlContent;
-  printFrame.onload=()=>{ printFrame.contentWindow.focus(); printFrame.contentWindow.print(); };
+  printFrame.onload=()=>{
+    printFrame.contentWindow.focus();
+    printFrame.contentWindow.print();
+    printFrame.style.display='none';
+  };
 });
 
-themeToggle.addEventListener('click', ()=>document.body.classList.toggle('dark-mode'));
+// Dark mode toggle
+themeToggle.addEventListener('click', ()=>{
+  document.body.classList.toggle('dark-mode');
+  themeToggle.setAttribute('aria-pressed', document.body.classList.contains('dark-mode'));
+});
+
+// Make existing images interactive
+editor.querySelectorAll('img').forEach(img=>makeImageInteractive(img));
 </script>
 </body>
 </html>
